// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractData() extracts benchmark output from cargo - cargo_output.txt 1`] = `
[
  {
    "name": "bench_fib_10",
    "os": "ubuntu-latest",
    "range": "± 24",
    "unit": "ns/iter",
    "value": 135,
  },
  {
    "name": "bench_fib_20",
    "os": "ubuntu-latest",
    "range": "± 755",
    "unit": "ns/iter",
    "value": 18149,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - cargo_output_units.txt 1`] = `
[
  {
    "name": "cmov",
    "os": "ubuntu-latest",
    "range": "± 14",
    "unit": "cycles/iter",
    "value": 2835,
  },
  {
    "name": "cmov2",
    "os": "ubuntu-latest",
    "range": "± 19",
    "unit": "cycles/iter",
    "value": 2845,
  },
  {
    "name": "mov",
    "os": "ubuntu-latest",
    "range": "± 17",
    "unit": "cycles/iter",
    "value": 1508,
  },
  {
    "name": "upload",
    "os": "ubuntu-latest",
    "range": "± 420",
    "unit": "MS/s",
    "value": 1911,
  },
  {
    "name": "download",
    "os": "ubuntu-latest",
    "range": "± 69",
    "unit": "MS/s",
    "value": 9001,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - cargo_output2.txt 1`] = `
[
  {
    "name": "bench_engine_new",
    "os": "ubuntu-latest",
    "range": "± 70126",
    "unit": "ns/iter",
    "value": 211834,
  },
  {
    "name": "bench_engine_new_raw",
    "os": "ubuntu-latest",
    "range": "± 18",
    "unit": "ns/iter",
    "value": 197,
  },
  {
    "name": "bench_engine_new_raw_core",
    "os": "ubuntu-latest",
    "range": "± 31",
    "unit": "ns/iter",
    "value": 196,
  },
  {
    "name": "bench_engine_register_fn",
    "os": "ubuntu-latest",
    "range": "± 82",
    "unit": "ns/iter",
    "value": 493,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - cargo_output3.txt 1`] = `
[
  {
    "name": "bench_fib_10",
    "os": "ubuntu-latest",
    "range": "± 2.21",
    "unit": "ns/iter",
    "value": 148.7,
  },
  {
    "name": "bench_fib_20",
    "os": "ubuntu-latest",
    "range": "± 440.25",
    "unit": "ns/iter",
    "value": 18794.12,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - criterion_output.txt 1`] = `
[
  {
    "name": "Create Realm",
    "os": "ubuntu-latest",
    "range": "± 4",
    "unit": "ns/iter",
    "value": 329,
  },
  {
    "name": "Symbols (Execution)",
    "os": "ubuntu-latest",
    "range": "± 47",
    "unit": "ns/iter",
    "value": 3268,
  },
  {
    "name": "For loop (Execution)",
    "os": "ubuntu-latest",
    "range": "± 123",
    "unit": "ns/iter",
    "value": 12314,
  },
  {
    "name": "Fibonacci (Execution)",
    "os": "ubuntu-latest",
    "range": "± 10166",
    "unit": "ns/iter",
    "value": 1672496,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - criterion_output_with_metadata_format.txt 1`] = `
[
  {
    "category": "ML-KEM",
    "keySize": "1024",
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "range": "± 4",
    "unit": "ns/iter",
    "value": 329,
  },
  {
    "api": "unpacked",
    "category": "ML-KEM",
    "keySize": "512",
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "platform": "neon",
    "range": "± 47",
    "unit": "ns/iter",
    "value": 3268,
  },
  {
    "api": "unpacked",
    "category": "ML-KEM",
    "keySize": "768",
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "platform": "neon",
    "range": "± 123",
    "unit": "ns/iter",
    "value": 12314,
  },
  {
    "api": "unpacked (external random)",
    "category": "ML-KEM",
    "keySize": "512",
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "platform": "neon",
    "range": "± 10166",
    "unit": "ns/iter",
    "value": 1672496,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - custom.txt 1`] = `
[
  {
    "category": "libcrux ML-DSA",
    "keySize": "44",
    "name": "KeyGen",
    "os": "ubuntu-latest",
    "platform": "portable",
    "range": undefined,
    "unit": "μs/iter",
    "value": 62,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output.txt 1`] = `
[
  {
    "name": "bench_fib_10",
    "os": "ubuntu-latest",
    "range": "± 24",
    "unit": "ns/iter",
    "value": 135,
  },
  {
    "name": "bench_fib_20",
    "os": "ubuntu-latest",
    "range": "± 755",
    "unit": "ns/iter",
    "value": 18149,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output_units.txt 1`] = `
[
  {
    "name": "cmov",
    "os": "ubuntu-latest",
    "range": "± 14",
    "unit": "cycles/iter",
    "value": 2835,
  },
  {
    "name": "cmov2",
    "os": "ubuntu-latest",
    "range": "± 19",
    "unit": "cycles/iter",
    "value": 2845,
  },
  {
    "name": "mov",
    "os": "ubuntu-latest",
    "range": "± 17",
    "unit": "cycles/iter",
    "value": 1508,
  },
  {
    "name": "upload",
    "os": "ubuntu-latest",
    "range": "± 420",
    "unit": "MS/s",
    "value": 1911,
  },
  {
    "name": "download",
    "os": "ubuntu-latest",
    "range": "± 69",
    "unit": "MS/s",
    "value": 9001,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output2.txt 1`] = `
[
  {
    "name": "bench_engine_new",
    "os": "ubuntu-latest",
    "range": "± 70126",
    "unit": "ns/iter",
    "value": 211834,
  },
  {
    "name": "bench_engine_new_raw",
    "os": "ubuntu-latest",
    "range": "± 18",
    "unit": "ns/iter",
    "value": 197,
  },
  {
    "name": "bench_engine_new_raw_core",
    "os": "ubuntu-latest",
    "range": "± 31",
    "unit": "ns/iter",
    "value": 196,
  },
  {
    "name": "bench_engine_register_fn",
    "os": "ubuntu-latest",
    "range": "± 82",
    "unit": "ns/iter",
    "value": 493,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output3.txt 1`] = `
[
  {
    "name": "bench_fib_10",
    "os": "ubuntu-latest",
    "range": "± 2.21",
    "unit": "ns/iter",
    "value": 148.7,
  },
  {
    "name": "bench_fib_20",
    "os": "ubuntu-latest",
    "range": "± 440.25",
    "unit": "ns/iter",
    "value": 18794.12,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - criterion_output.txt 1`] = `
[
  {
    "name": "Create Realm",
    "os": "ubuntu-latest",
    "range": "± 4",
    "unit": "ns/iter",
    "value": 329,
  },
  {
    "name": "Symbols (Execution)",
    "os": "ubuntu-latest",
    "range": "± 47",
    "unit": "ns/iter",
    "value": 3268,
  },
  {
    "name": "For loop (Execution)",
    "os": "ubuntu-latest",
    "range": "± 123",
    "unit": "ns/iter",
    "value": 12314,
  },
  {
    "name": "Fibonacci (Execution)",
    "os": "ubuntu-latest",
    "range": "± 10166",
    "unit": "ns/iter",
    "value": 1672496,
  },
]
`;
